--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Cabin&family=Caprasimo&family=Lato&family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,100;0,300;0,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cabin&family=Caprasimo&family=Lato&family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,100;0,300;0,400;0,500;1,100;1,200;1,700&display=swap");
 
 *{
     margin: 0;
@@ -7,4 +7,38 @@
     font-family: "Poppins" , sans-serif;
 }
 
+body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(45deg, #ffd195, #ffb287)
+}
 
+.rating-box{
+    position: relative;
+    background: #fff;
+    padding: 25px 50px 35px;
+    border-radius: 25px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.05);
+}
+
+.rating-box header{
+    font-size: 22px;
+    color: #dadada;
+    font-weight: 500;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.rating-box .stars{
+    display: flex;
+   align-items: center;
+   gap: 25px;
+}
+
+.stars i{
+    color: #e6e6e6;
+    font-size: 35px;
+    cursor: pointer;
+}
